# instmodel-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  model_graph.rs
src/errors/: mod.rs  model_error.rs
src/graph/: buffer.rs  compile.rs  core.rs  mod.rs  model.rs  operation.rs
src/layers/: activation.rs  dense.rs  mod.rs
src/training/: config.rs  loss.rs  mod.rs  trainer.rs
src/utils/: mod.rs
tests/: inference_integration_test.rs
