[package]
name = "instmodel"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Instruction-based neural network model training library using Burn"
authors = ["João Ferreira"]
repository = "https://github.com/Joaoprcf/instmodel-rust"
keywords = ["neural-network", "machine-learning", "burn", "deep-learning"]
categories = ["science", "mathematics"]

[dependencies]
# Burn framework with WGPU backend (no external dependencies)
burn = { version = "0.16", features = ["wgpu", "autodiff", "train", "ndarray"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# For testing against the inference library
instmodel_inference = "0.2.1"

# For floating point comparison in tests
approx = "0.5"
